# rtype_server

./: .gitmodules  CMakeLists.txt
Project/: game-main.cpp  main.cpp
Project/rtype/api/: API.cpp  API.hpp  CMakeSources.cmake  Credential.hpp  Player.hpp
Project/rtype/components/: CMakeSources.cmake  Components.hpp  Configuration.hpp
Project/rtype/entity/: CMakeSources.cmake  CollisionSystem.hpp  GameFactory.cpp  GameFactory.hpp
Project/rtype/error/: RTypeError.cpp  RTypeError.hpp
Project/rtype/gameserver/: CMakeSources.cmake  ConfigManager.cpp  ConfigManager.hpp  IOThread.hpp  Server.hpp  ServerIOThread.hpp
Project/rtype/lua/: LuaManager.hpp
Project/rtype/master/: CMakeSources.cmake  GameSpawner.hpp  MatchMaker.hpp  PlayerPool.hpp  Server.hpp
Project/rtype/netproto/: CMakeSources.cmake  TCPPacketReader.hpp  TCPProtocolConnection.hpp
Project/rtype/protocol/: Game.hpp  MatchMaking.hpp  Protocol.hpp
test/: CMakeLists.txt
test/api-test/: CMakeLists.txt  api-test.cpp
test/matchmaker/: CMakeLists.txt  matchmaker-test.cpp
test/server-test/: CMakeLists.txt  server-test.cpp
test/tcppacketreader/: CMakeLists.txt  tcppacketreader-test.cpp
